--- a/src/styelsheets/hire.css
+++ b/src/styelsheets/hire.css
@@ -400,7 +400,7 @@ body.dark-mode .location-info {
     }
 
     .hero-section {
-        padding-top: 60px;
+        padding-top: 120px;
     }
 }
 
